# fieldz_kb

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: docs.yml  release.yml  tests.yml
CHANGELOG/: index.html
about/: index.html
api_reference/biocypher/adapter/: index.html
api_reference/biocypher/utils/: index.html
api_reference/clingo/core/: index.html
api_reference/clingo/plugins/: index.html
api_reference/clingo/session/: index.html
api_reference/clingo/utils/: index.html
api_reference/lpg/backends/falkordb/: index.html
api_reference/lpg/backends/falkordblite/: index.html
api_reference/lpg/backends/neo4j/: index.html
api_reference/lpg/core/: index.html
api_reference/lpg/graph/: index.html
api_reference/lpg/plugins/: index.html
api_reference/lpg/session/: index.html
api_reference/lpg/utils/: index.html
api_reference/typeinfo/: index.html
docs/: getting_started.md  index.md
docs/api_reference/: typeinfo.md
docs/api_reference/biocypher/: adapter.md  utils.md
docs/api_reference/clingo/: core.md  plugins.md  session.md  utils.md
docs/api_reference/lpg/: core.md  graph.md  plugins.md  session.md  utils.md
docs/api_reference/lpg/backends/: falkordb.md  falkordblite.md  neo4j.md
getting_started/: index.html
search/: search_index.json
src/fieldz_kb/: __init__.py  typeinfo.py  utils.py
src/fieldz_kb/biocypher/: __init__.py  adapter.py  core.py  utils.py
src/fieldz_kb/clingo/: __init__.py  core.py  plugins.py  session.py  utils.py
src/fieldz_kb/lpg/: core.py  graph.py  plugins.py  session.py  utils.py
src/fieldz_kb/lpg/backends/: falkordb.py  falkordblite.py  neo4j.py
src/fieldz_kb/lpg/falkordb/: pylpg.py
src/fieldz_kb/lpg/falkordblite/: pylpg.py
src/fieldz_kb/lpg/neo4j/: pylpg.py
src/fieldz_kb/lpg/neo4j/neomodel/: __init__.py  backend.py  core.py  session.py
src/fieldz_kb/lpg/pylpg/: core.py  session.py
src/fieldz_kb/neo4j/: core.py  neomodel.py
tests/: __init__.py  annotations.txt  conftest.py  test.py  test_biocypher.py  test_clingo_core.py  test_lpg_core.py  test_lpg_inheritance.py  test_lpg_session.py  test_neo4j_core.py  test_neo4j_pylpg_core.py  test_typeinfo.py
tests/neo4j/: test_neomodel.py
