[project]
name = "fieldz_kb"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Adrien Rougny", email = "adrienrougny@gmail.com" }]
dependencies = ["fieldz>=0.1.2", "neomodel>=5.5.0", "inflect>=7.5.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = ["pytest>=8.4.1", "pydantic>=2.11.7"]

[tool.basedpyright]
typeCheckingMode = "off"
