[project]
name = "fieldz_kb"
dynamic = ["version"]
description = "A library store dataclass-like objects into knowledge bases"
authors = [{ name = "Adrien Rougny", email = "adrienrougny@gmail.com" }]
dependencies = [
    "fieldz>=0.1.2",
    "inflect>=7.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
clingo = ["clorm>=1.6.1"]
neo4j = ["pylpg[neo4j]>=0.2.3"]
falkordb = ["pylpg[falkordb]>=0.2.3"]
falkordblite = ["pylpg[falkordblite]>=0.2.3"]
biocypher = ["pylpg>=0.2.3", "pyyaml>=6.0"]
all = [
    "fieldz_kb[clingo,neo4j,falkordb,falkordblite,biocypher]",
]

[project.urls]
Homepage = "https://github.com/adrienrougny/fieldz_kb"
Issues = "https://github.com/adrienrougny/fieldz_kb/issues"


[dependency-groups]
dev = ["ruff>=0.12.8", "pre-commit>=4.0", { include-group = "test" }]
test = [
    "pytest>=9.0.2",
    "testcontainers[neo4j]>=4.0",
    "clorm>=1.6.1",
    "pylpg[neo4j,falkordb]>=0.2.3",
    "pyyaml>=6.0",
    "falkordblite>=0.1; python_version >= '3.12'",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = '^v(?P<version>([0-9].*))'

[tool.hatch.build.targets.wheel]
packages = ["src/fieldz_kb"]
